Initial production checkin for activity logger. Logs all non-widget activity.